.metadata/.plugins/org.eclipse.cdt.ui/Ejercicio10-3Dojo.build.log
01:45:10 **** Rebuild of configuration Debug for project Ejercicio10-3Dojo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio10-3Dojo.o" "..\\src\\Ejercicio10-3Dojo.c" 
..\src\Ejercicio10-3Dojo.c:37:1: error: two or more data types in declaration specifiers
 int main(void)
 ^~~
..\src\Ejercicio10-3Dojo.c:37:5: warning: return type of 'main' is not 'int' [-Wmain]
 int main(void)
     ^~~~
..\src\Ejercicio10-3Dojo.c: In function 'main':
..\src\Ejercicio10-3Dojo.c:52:16: warning: unused variable 'tipo' [-Wunused-variable]
  etipoProducto tipo[4]= {{1000,"Iphone"},{1001,"Ipad"},{1002,"Mac"},{1003,"Accesorios"}};
                ^~~~
..\src\Ejercicio10-3Dojo.c:43:8: warning: unused variable 'promedio' [-Wunused-variable]
  float promedio;
        ^~~~~~~~
..\src\Ejercicio10-3Dojo.c:42:8: warning: unused variable 'acumulador' [-Wunused-variable]
  float acumulador;
        ^~~~~~~~~~
..\src\Ejercicio10-3Dojo.c:41:6: warning: unused variable 'contador' [-Wunused-variable]
  int contador;
      ^~~~~~~~

01:45:10 Build Failed. 1 errors, 5 warnings. (took 552ms)

